--- a/Site/about.html
+++ b/Site/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>ZYTK Devs</title>
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="/workspaces/zytk/Style/style.css">
     </head>
 
     <body>
@@ -14,12 +14,20 @@
             </div>
         </div>
         <div class="content">
-            <h2>Made From Your Favorite IDEs</h2>
-            <h4>Including GitHub Atom.</h4>
+            <div class="section">
+                <h1>Made From</h1>
+                <h1>The Best</h1>
+                <h1></h1>
+                <h1>IDEs Including</h1>
+                <h1></h1>
+                <h1>Eclipse Che</h1>
+            </div>
             <aside>
-                <img src="./download.png">
-                <img src="./download1.png">
-                <img src="./download2.png">
+                <img src="/workspaces/zytk/Style/download.png">
+                <br>
+                <img src="/workspaces/zytk/Style/download1.png">
+                <br>
+                <img src="/workspaces/zytk/Style/download2.png">
             </aside>
         </div>
     </body>
