--- a/Site/index.html
+++ b/Site/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>ZYTK Devs</title>
-        <link rel="stylesheet" href="/workspaces/zytk/Style/style.css">
+        <link rel="stylesheet" href="/Style/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
