--- a/Site/index.html
+++ b/Site/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
     <head>
         <title>ZYTK Devs</title>
-        <link rel="stylesheet" href="workspaces/zytk/Style/style.css">
+        <link rel="stylesheet" href="./Style/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
         <div class="header">
-            <a href="./home.html" class="logo">Z1TK</a>
+            <a href="./index.html" class="logo">Z1TK</a>
             <div class="header-right">
-                <a class="active" href="./home.html">Home</a>
+                <a class="active" href="./index.html">Home</a>
                 <a href="./about.html">About</a>
             </div>
         </div>
@@ -24,8 +24,6 @@
             <p>Want to get notified when Z1TK is released? Enter your email down below.</p>
             <form class="email">
                 <input type="email" autofocus placeholder="Email">
-                <input type="submit">
+                <input id="submit">
             </form>
         </div>
-    </body>
-</html>
