--- a/Site/about.html
+++ b/Site/about.html
@@ -2,14 +2,14 @@
 <html lang="en">
     <head>
         <title>ZYTK Devs</title>
-        <link rel="stylesheet" href="/workspaces/zytk/Style/style.css">
+        <link rel="stylesheet" href="./Style/style.css">
     </head>
 
     <body>
         <div class="header">
-            <a href="./home.html" class="logo">Z1TK</a>
+            <a href="./index.html" class="logo">Z1TK</a>
             <div class="header-right">
-                <a href="./home.html">Home</a>
+                <a href="./index.html">Home</a>
                 <a class="active" href="./about.html">About</a>
             </div>
         </div>
@@ -23,11 +23,11 @@
                 <h1>Eclipse Che</h1>
             </div>
             <aside>
-                <img src="/workspaces/zytk/Style/download.png">
+                <img src="./Style/download.png">
                 <br>
-                <img src="/workspaces/zytk/Style/download1.png">
+                <img src="./Style/download1.png">
                 <br>
-                <img src="/workspaces/zytk/Style/download2.png">
+                <img src="./Style/download2.png">
             </aside>
         </div>
     </body>
