--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>ZYTK Devs</title>
-        <link rel="stylesheet" href="./Style/style.css">
+        <link rel="stylesheet" href="./style.css">
     </head>
 
     <body>
@@ -23,11 +23,11 @@
                 <h1>Eclipse Che</h1>
             </div>
             <aside>
-                <img src="./Style/download.png">
+                <img src="./download.png">
                 <br>
-                <img src="./Style/download1.png">
+                <img src="./download1.png">
                 <br>
-                <img src="./Style/download2.png">
+                <img src="./download2.png">
             </aside>
         </div>
     </body>
