--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>ZYTK Devs</title>
-        <link rel="stylesheet" href="./Style/style.css">
+        <link rel="stylesheet" href="./style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
