--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
             <p>Want to get notified when Z1TK is released? Enter your email down below.</p>
             <form class="email">
                 <input type="email" autofocus placeholder="Email">
-                <input id="submit">
+                <input type="submit">
             </form>
         </div>
