--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <div class="header-right">
                 <a class="active" href="./index.html">Home</a>
                 <a href="./about.html">About</a>
+                <a href="https://z1tk-devz.github.io/ce-beta">Code Editor(Beta)</a>
             </div>
         </div>
         <div class="content">
