--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
             <div class="header-right">
                 <a href="./index.html">Home</a>
                 <a class="active" href="./about.html">About</a>
+                <a href="https://z1tk-devz.github.io/ce-beta">Code Editor(Beta)</a>
             </div>
         </div>
         <div class="content">
